[package]
name = "user"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
buddy_system_allocator = "0.6"
bitflags = "1.2.1"
lazy_static = { version = "1.4", features = ["spin_no_std"] }
embedded-graphics = "0.8.1"
virtio-input-decoder = "0.1.4"

[profile.release]
debug = true
